yamls/baidu.yaml
apiVersion: v1
kind: Service
metadata:
  name: baidusvc
spec:
  type: ExternalName
  externalName: www.baidu.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router.virtuallain.com
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "www.baidu.com"
spec:
  ingressClassName: nginx
  rules:
    - host: router.virtuallain.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: baidusvc
                port:
                  number: 443
            pathType: Prefix
