yamls/ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: p.virtuallain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myipsvc
                port:
                  number: 8443
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: myipsvc
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: myipsvc   # 名称和service保持一致，会自动关联
subsets:
  - addresses:
      - ip: 192.168.0.105
    ports:
      - port: 443   # 端口和service的targetPort关联
